# ChangeLog for media-sound/rosegarden
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/rosegarden/ChangeLog,v 1.49 2008/01/06 19:06:58 flameeyes Exp $

*rosegarden-1.6.1-r1 (06 Jan 2008)

  06 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/rosegarden-1.6.1-nojack.patch, -rosegarden-1.6.1.ebuild,
  +rosegarden-1.6.1-r1.ebuild:
  Fix handling of user-defined CXXFLAGS, revision bump to force rebuild. Fix
  bug #204013. I hate cmake.

*rosegarden-1.6.1 (23 Dec 2007)

  23 Dec 2007; Carsten Lohrke <carlo@gentoo.org>
  +files/rosegarden-1.6.1-asneeded.patch,
  +files/rosegarden-1.6.1.desktop.diff, +rosegarden-1.6.1.ebuild:
  Version bump.

  02 Jul 2007; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Hand to newly-born proaudio herd.

*rosegarden-1.5.1 (20 Jun 2007)

  20 Jun 2007; Diego Pettenò <flameeyes@gentoo.org>
  +files/rosegarden-1.5.1-asneeded.patch, +rosegarden-1.5.1.ebuild:
  Version bump, closes bug #168366. Thanks to Wai Ling for reporting, and
  everybody on that bug. Also thanks to Alexis Ballier and the guys at
  proaudio overlay whose ebuild I based on.

  17 Apr 2007; Alexis Ballier <aballier@gentoo.org>
  -files/4.1.0-amd64.patch, -files/4.1.0-gcc4.diff, -files/4.1.0-dssi.patch,
  -files/4.1.0-includehints.patch, -rosegarden-4.1.0-r1.ebuild,
  -rosegarden-4.1.0-r2.ebuild:
  Eventually nuke old versions, bug #172754

  16 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  rosegarden-1.4.0.ebuild:
  stable amd64, bug 172754

  07 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  rosegarden-1.4.0.ebuild:
  ppc stable, bug #172754

  04 Apr 2007; Raúl Porcel <armin76@gentoo.org> rosegarden-1.4.0.ebuild:
  x86 stable wrt bug 172754

  06 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  rosegarden-1.2.4.ebuild, rosegarden-1.4.0.ebuild,
  rosegarden-4.1.0-r1.ebuild, rosegarden-4.1.0-r2.ebuild:
  Nuking ~sparc until DEPs are properly handled
