@@ -17,14 +17,9 @@ AUX rosegarden-1.6.1.desktop.diff 617 RMD160 c86918100fbec8962e46d17d8c943ab0e65
 MD5 c558c43fec3b56d5038d215188c11e36 files/rosegarden-1.6.1.desktop.diff 617
 RMD160 c86918100fbec8962e46d17d8c943ab0e65218c6 files/rosegarden-1.6.1.desktop.diff 617
 SHA256 70a1e0151db9bc5374e46ebbf90dc0e12cfb14ae5fdfbcd80f5d4b1ab4437785 files/rosegarden-1.6.1.desktop.diff 617
-DIST rosegarden-1.2.4.tar.bz2 5422509 RMD160 71849d9a2491b146d7cc5e32ca1d4d5b1febd974 SHA1 ac788ebd5e8cb439643a4238fe808d752481fc83 SHA256 104f9590a10cf74182806f64a4daab24893d0ac45d166da12396354cf0067879
 DIST rosegarden-1.4.0.tar.bz2 6052571 RMD160 6f21b6b3d7bcfde02372a50f527a68901e8df376 SHA1 60382f50c728a4b41f5d9e5e6a0780111b8ccb2f SHA256 1e35a229f64e31b9ae1ec9bc20095010db5c9c464faf292ef4c1b79f5a9de2ca
 DIST rosegarden-1.5.1.tar.bz2 6137509 RMD160 dfddce14494fe0a8bdd89e08eb84929a899ea687 SHA1 59b387ca936fe315db234487556f7f0f23c748f4 SHA256 bac5c3e6af0bbf3fa950a5b155591e13460717c32c14a9f841a9bef699f123ae
 DIST rosegarden-1.6.1.tar.bz2 6952370 RMD160 0efd9dea8719dcaaadef36843d66532dd3c88b71 SHA1 8af8f778c59c794e06c3ee34e9fc5efb7746bc7b SHA256 3375f3ffd409b9270f6de03aa39537e9a8477d181825b732abfe72204fec28ce
-EBUILD rosegarden-1.2.4.ebuild 1320 RMD160 31779c14af4caca6dcec9eef8444b5390cb503d8 SHA1 d9911968123810e27e1c1c68dc286e2e99ad5929 SHA256 a102b6ceec12d12345a4053034b702c7b1e2050dde7c0772b45d8ec248b8a3a3
-MD5 55a431cdc50f2de3504723824ea1ca53 rosegarden-1.2.4.ebuild 1320
-RMD160 31779c14af4caca6dcec9eef8444b5390cb503d8 rosegarden-1.2.4.ebuild 1320
-SHA256 a102b6ceec12d12345a4053034b702c7b1e2050dde7c0772b45d8ec248b8a3a3 rosegarden-1.2.4.ebuild 1320
 EBUILD rosegarden-1.4.0.ebuild 1314 RMD160 85a13d905aab2e31e3c3174579b2a7f51f14109b SHA1 1b12d7accdbbc9a56a59d7924260baf007f58c19 SHA256 e2514dc27510fa2726de768896cc9c140ab438a7083c4afde8d6c701d5a4584d
 MD5 182bc3474a90b09c0969bfe3f5146e78 rosegarden-1.4.0.ebuild 1314
 RMD160 85a13d905aab2e31e3c3174579b2a7f51f14109b rosegarden-1.4.0.ebuild 1314
@@ -37,17 +32,14 @@ EBUILD rosegarden-1.6.1-r1.ebuild 2168 RMD160 93fb658a0a1e2cf95e466cda2ae86bda51
 MD5 d60476527b1355e6da2d59c55cd42fc5 rosegarden-1.6.1-r1.ebuild 2168
 RMD160 93fb658a0a1e2cf95e466cda2ae86bda519017e2 rosegarden-1.6.1-r1.ebuild 2168
 SHA256 34f69bce0c206fd7b6b16cc06eb003a6c6e8e6ccb05a40bf816de4ecf0d4fd64 rosegarden-1.6.1-r1.ebuild 2168
-MISC ChangeLog 8070 RMD160 0fa3e87e83a15101f8926d0bd7fefbaf7f4d4336 SHA1 2795bfd3eb293c16fc315dc1d98963fceb504da5 SHA256 4a0bb61e084ed1b89fd6865598c1b038049be379a7dd087783e94e250146d38e
-MD5 bf76cbfdbf8b20b486b0bbf137d592cc ChangeLog 8070
-RMD160 0fa3e87e83a15101f8926d0bd7fefbaf7f4d4336 ChangeLog 8070
-SHA256 4a0bb61e084ed1b89fd6865598c1b038049be379a7dd087783e94e250146d38e ChangeLog 8070
+MISC ChangeLog 8175 RMD160 c2d966d3afcb466b050c1bb4b5065d8ff01e53ae SHA1 52be0b58561656166602dc4ad96a1b495ed88bcf SHA256 5fa4bf389b4d7c72929f6df3d2f82c8999da7cd2a9413fd4abed3c1fd9a0a110
+MD5 54382f439d1c46c2339a78e0452866a7 ChangeLog 8175
+RMD160 c2d966d3afcb466b050c1bb4b5065d8ff01e53ae ChangeLog 8175
+SHA256 5fa4bf389b4d7c72929f6df3d2f82c8999da7cd2a9413fd4abed3c1fd9a0a110 ChangeLog 8175
 MISC metadata.xml 161 RMD160 2738d17827a71b5ccbadae4c4f909d2b57d147b0 SHA1 90201ddb830142147774cc7b7b5178fbd0a9af0c SHA256 0ba191421eefd954d1efe9f6c3384e8c8d7455d35a7e79457272e1c29211b09e
 MD5 f62f5a9cf5fe86389cf2bf4d85244ef5 metadata.xml 161
 RMD160 2738d17827a71b5ccbadae4c4f909d2b57d147b0 metadata.xml 161
 SHA256 0ba191421eefd954d1efe9f6c3384e8c8d7455d35a7e79457272e1c29211b09e metadata.xml 161
-MD5 c1edaf2faab2597e64cce44e2c89fcd7 files/digest-rosegarden-1.2.4 256
-RMD160 713cd2ba1923dcd976283b77188c4d7ebcc66458 files/digest-rosegarden-1.2.4 256
-SHA256 2934b1adf7fd4568faa6a0cda6593a2bbe1fe26bd0174130c94cd66b0c24be8e files/digest-rosegarden-1.2.4 256
 MD5 0fcd94343822096f316f47d9e6d8c4ce files/digest-rosegarden-1.4.0 256
 RMD160 b2d9a6bdb58527db0242f2d89bf0e5ae6b260fe8 files/digest-rosegarden-1.4.0 256
 SHA256 22b5feba3e8d28f934ce73539ffc7ce69738679369a8d79e99421a7dee1e429c files/digest-rosegarden-1.4.0 256
@@ -60,7 +52,7 @@ SHA256 cd753de8cd8b318f6fc77d41033539b54684cc8da0252dcd3996183df63e1b00 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.8 (GNU/Linux)
 
-iEYEARECAAYFAkeBJuIACgkQAiZjviIA2XiAKgCeKvlqnCp3h11y+UC+vtvpNmvO
-270An0QU/ncjFh3Cm3xEBgptLy9KZoS9
-=HbTd
+iEYEARECAAYFAkeBKq8ACgkQAiZjviIA2Xho/ACghWd5tgmWvk4vPKlMmmgvTO2W
+JQEAoLhBGFqLLuiZ9vYOuB6AdTV7lSL7
+=xIhS
 -----END PGP SIGNATURE-----
