@@ -1,3 +1,0 @@
-MD5 8f91219d2bbc5cfa1458fa1697a534a1 rosegarden-1.2.4.tar.bz2 5422509
-RMD160 71849d9a2491b146d7cc5e32ca1d4d5b1febd974 rosegarden-1.2.4.tar.bz2 5422509
-SHA256 104f9590a10cf74182806f64a4daab24893d0ac45d166da12396354cf0067879 rosegarden-1.2.4.tar.bz2 5422509
