@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/rosegarden
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/rosegarden/ChangeLog,v 1.49 2008/01/06 19:06:58 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/rosegarden/ChangeLog,v 1.50 2008/01/06 19:23:22 flameeyes Exp $
+
+  06 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
+  -rosegarden-1.2.4.ebuild:
+  Remove old versions.
 
 *rosegarden-1.6.1-r1 (06 Jan 2008)
 
